--- a/apps/app/index.html
+++ b/apps/app/index.html
@@ -41,6 +41,13 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
+    <style>
+      input {
+        width: 120px;
+        margin-right: 10px;
+      }
+    </style>
+
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
