--- a/apps/app/index.html
+++ b/apps/app/index.html
@@ -7,59 +7,8 @@
   <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.min.js"></script>
   <link rel="stylesheet" href="bower_components/leaflet-dist/leaflet.css" />
   <link rel="stylesheet" type="text/css" href="http://cloud.github.com/downloads/lafeber/world-flags-sprite/flags32.css" />
-  <style>
-    html {
-      font-family: sans-serif;
-    }
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
 
-    body, html { height: 100%; }
-
-    .info {
-      background: rgba(255, 255, 255, 0.9);
-      border-radius: 5px;
-    }
-
-    .legend {
-      padding: 6px 8px;
-      font: 14px/16px Arial, Helvetica, sans-serif;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2);
-      background: rgba(255, 255, 255, 0.9);
-      border-radius: 5px;
-      font-weight: bold;
-      line-height: 18px;
-      color: #555;
-    }
-
-    .legend i {
-      clear: both;
-      width: 16px;
-      height: 16px;
-      float: left;
-      opacity: 0.7;
-      margin-right: 8px;
-    }
-
-    div.box {
-      position: absolute;
-      top: 1em;
-      right: 1em;
-      z-index: 100;
-      padding: 1em;
-      text-align: center;
-    }
-
-    div.country {
-      font-size: 2em;
-      font-weight: bold;
-      position: absolute;
-      bottom: 1em;
-      left: 1em;
-      z-index: 100;
-      padding: .2em .5em;
-      line-height: 1.1em;
-      text-align: center;
-    }
-  </style>
   <script>
     var app = angular.module("demoapp", ["leaflet-directive"]);
     app.controller('DemoController', [ "$scope", "$http", function($scope, $http) {
