--- a/apps/app/index.html
+++ b/apps/app/index.html
@@ -11,11 +11,13 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/leaflet-dist/leaflet.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <link rel="stylesheet" type="text/css" href="http://cloud.github.com/downloads/lafeber/world-flags-sprite/flags32.css" />
   </head>
   <body ng-app="ethosiaClientApp">
     <!--[if lt IE 7]>
@@ -61,6 +63,8 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/leaflet-dist/leaflet.js"></script>
+    <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
     <!-- endbower -->
 
     <script src="bower_components/angular-apimock/dist/angular-apimock.min.js"></script>
@@ -73,7 +77,6 @@
         <script src="scripts/services/boxes.js"></script>
         <script src="scripts/services/ethosiahttpinterceptor.js"></script>
         <script src="scripts/services/backend-url.js"></script>
-        <script src="scripts/directives/nofar.js"></script>
         <!-- endbuild -->
 </body>
 </html>
