--- a/apps/app/index.html
+++ b/apps/app/index.html
@@ -68,6 +68,7 @@
     <!-- endbower -->
 
     <script src="bower_components/angular-apimock/dist/angular-apimock.min.js"></script>
+    <script src="json/us-states.js"></script>
 
     <!-- endbuild -->
 
