Custom control displays name of division and percent on hover.

--- a/apps/app/index.html
+++ b/apps/app/index.html
@@ -77,6 +77,7 @@
         <script src="scripts/services/boxes.js"></script>
         <script src="scripts/services/ethosiahttpinterceptor.js"></script>
         <script src="scripts/services/backend-url.js"></script>
+        <script src="scripts/directives/hover-info.js"></script>
         <!-- endbuild -->
 </body>
 </html>
