--- a/ibli/modules/custom/ibli_migrate/html/page_element/homepage-welcome.html
+++ b/ibli/modules/custom/ibli_migrate/html/page_element/homepage-welcome.html
@@ -1,7 +1,7 @@
-<object id="flashObj" width="595" height="390" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,47,0"><param name="movie" value="http://c.brightcove.com/services/viewer/federated_f9?isVid=1" /><param name="bgcolor" value="#FFFFFF" /><param name="flashVars" value="videoId=3476194896001&linkBaseURL=http%3A%2F%2Fecon.st%2F1hKGwcS&playerID=1425961410001&playerKey=AQ~~,AAABDH-R__E~,dB4S9tmhdOo20g03jDsDgNBGDcclfHEU&domain=embed&dynamicStreaming=true" /><param name="base" value="http://admin.brightcove.com" /><param name="seamlesstabbing" value="false" /><param name="allowFullScreen" value="true" /><param name="swLiveConnect" value="true" /><param name="allowScriptAccess" value="always" /><embed src="http://c.brightcove.com/services/viewer/federated_f9?isVid=1" bgcolor="#FFFFFF" flashVars="videoId=3476194896001&linkBaseURL=http%3A%2F%2Fecon.st%2F1hKGwcS&playerID=1425961410001&playerKey=AQ~~,AAABDH-R__E~,dB4S9tmhdOo20g03jDsDgNBGDcclfHEU&domain=embed&dynamicStreaming=true" base="http://admin.brightcove.com" name="flashObj" width="595" height="390" seamlesstabbing="false" type="application/x-shockwave-flash" allowFullScreen="true" swLiveConnect="true" allowScriptAccess="always" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></embed></object>
+<iframe width="560" height="315" src="//www.youtube.com/embed/wCmqEcvOSwU?autoplay=1" frameborder="0" allowfullscreen></iframe>
 <br />
-A new insurance programme in northern Kenya is helping farmers protect their livelihoods in dry seasons.<br />
+In Kenya's drylands, drought has always been the greatest hazard faced by livestock herding families. Modern pressures are making this situation worse.
 <br />
-Farmers who contribute to the scheme will be given payments should their livestock die. The initiative has already been linked to a 33-percent drop in food aid needed in the area.<br />
+This film tells the story of a research project started in 2007, which this year introduced a new form of insurance to remote herding peoples who had never been provided with insurance before.
 <br />
-Al Jazeera's Caroline Malone reports.<br />
+This new insurance product has potential to protect many other herding communities throughout Africa.
