--- a/ibli/modules/custom/ibli_migrate/html/page_element/homepage-welcome.html
+++ b/ibli/modules/custom/ibli_migrate/html/page_element/homepage-welcome.html
@@ -1,1 +1,1 @@
-<iframe width="560" height="315" src="//www.youtube.com/embed/wCmqEcvOSwU?autoplay=1" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="//www.youtube.com/embed/wCmqEcvOSwU" frameborder="0" allowfullscreen></iframe>
