--- a/ibli/modules/custom/ibli_migrate/html/page_element/contact-form-description.html
+++ b/ibli/modules/custom/ibli_migrate/html/page_element/contact-form-description.html
@@ -1,3 +1,3 @@
 <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin congue tellus ut velit mollis condimentum. Nulla egestas neque sed odio varius facilisis. Donec ac metus gravida leo dictum porttitor.
+  If you have additional questions and/or comments about Index-Based Livestock Insurance, please complete form below and we will respond as soon as possible.
 </p>
